more spacing fix, added headlines box, introduced css specific to frontpage

--- a/views/container/style.styl
+++ b/views/container/style.styl
@@ -45,9 +45,10 @@ body
 		margin-top -1em
 		position relative
 		font-size 0.8em
-		padding-left 1em
+		padding-left 0em
 
 		a.hover
+			display block
 			border-right 1px solid white
 			-webkit-transition-property color, border-color
 			-moz-transition-property color, border-color
@@ -83,7 +84,9 @@ body
 		.rounded.collection
 			padding-right 0px
 			width 300px + (container-padding)
-		
+
+		.vertical-container .vertical
+			margin-bottom -2px
 	.container.twitter
 		.text
 			h3
@@ -154,7 +157,7 @@ body
 			letter-spacing 1px
 
 			text-transform uppercase
-			margin-bottom -0.2em
+			margin-bottom 0px
 			
 			
 	.rounded
